--- a/examples/python-web-app/Dockerfile
+++ b/examples/python-web-app/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 COPY requirements.txt /app
 COPY devops /app
+ENV PIP_BREAK_SYSTEM_PACKAGES 1
 
 RUN apt-get update && \
     apt-get install -y python3 python3-pip && \
@@ -13,6 +14,6 @@ RUN apt-get update && \
 ENTRYPOINT ["python3"]
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
-ENV PIP_SYSTEM_PACKAGES 1
+
 
 
